Chapter one w3schools HTML example

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Kurohinotori's Game Portfolio</title>
+</head>
+<body>
+
+<h1>Disclaimer</h1>
+<p>This is a playground site for Kurohinotori. The content will be primarily game related.</p>
+
+</body>
+</html>
